--- a/psc-rabbitmq/pom.xml
+++ b/psc-rabbitmq/pom.xml
@@ -4,10 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>fr.ans.psc</groupId>
     <artifactId>psc-rabbitmq-conf</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <version>1.0</version>
+    <packaging>jar</packaging>
+    <name>psc-rabbitmq-conf</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
